<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDish</string>
    <string name="action_settings">Settings</string>

    <string name="default_title">Give your dish a name!</string>
    <string name="default_date">Tuesday</string>
    <string name="default_notes"> Some default Notes! Yum! </string>
    <string name="picture_text"> Some default Notes! Yum! </string>

    <string name="picture_hint"> Tap to retake a picture! </string>
    <string name="categories_hint"> Tap to select categories! </string>
    <string name="choose_categories">Search and Add Categories!</string>
    <string name="search_category">Add new Category</string>

    <string name="cuteAnimals" formatted="false">"http://4.bp.blogspot.com/_OSilAVr4dYE/SbueDIFeF9I/AAAAAAAADiw/BOOAT5kpwRM/s320/kitten.jpg,http://4.bp.blogspot.com/-XVVZJQLO1H0/UDB3N2vevsI/AAAAAAAAPfw/D51Zh6g0t9U/s1600/Cute+Kitten+8.jpg,http://4.bp.blogspot.com/-tM4uHVgSxMs/TtB1_aIT3II/AAAAAAAAEdE/OYwq0lzXy9Q/s320/Funny+Cute+Kittens_3.jpg,http://2.bp.blogspot.com/-_dKDH-xe9ds/TbxlvavVb9I/AAAAAAAAD0o/blJBQvpzgq4/s320/too-cute-kitten.jpg,http://4.bp.blogspot.com/-nuL10ze8jFE/UDB2DMArdhI/AAAAAAAAPcw/qaRhoVM94PY/s1600/Cute+Kitten+11.jpg,http://cutelibrary.com/wp-content/uploads/2012/10/Cute-Kitten-Names03.jpg,http://1.bp.blogspot.com/-ld1w-xCN0nA/UDB2HIY55WI/AAAAAAAAPdA/ho23L6J3TBA/s1600/Cute+Kitten+13.jpg,http://1.bp.blogspot.com/-jbGckrGTKrc/T3IGh_ma1YI/AAAAAAAAAIc/YRb0RUQml0c/s1600/cute-kitten-pictures-002.jpg,http://1.bp.blogspot.com/_THPxqd2xIW0/TGTxuRFV5EI/AAAAAAAAANQ/IbO-ODos8Qc/s1600/cute-kitten-04.jpg,http://fc07.deviantart.net/fs71/f/2011/052/7/f/cute_kitten_by_maximum858-d3a2onm.jpg,http://4.bp.blogspot.com/-mPdUnqTunEI/UOb8tEOWHEI/AAAAAAAABjw/-LvyS0wUOIs/s1600/cute-kitten.jpg,http://2.bp.blogspot.com/-TqQxCco4rUU/UKZfbBCLsQI/AAAAAAAACPo/6rHdgV_lhKo/s1600/43962-kittens-cute-kitten.jpg,http://4.bp.blogspot.com/_qu1kKj1eipY/TP8ik1_PVwI/AAAAAAAAABc/ox6J6fuSLhI/s1600/cute+kitten.jpg,http://stuffpoint.com/kittens/image/182897-kittens-cute-kitten.jpg,http://2.bp.blogspot.com/-0gcaVcwyeeo/T7OPKQG18PI/AAAAAAAAAGU/Ql2_joyHs5w/s1600/cute-kitten-baby-ducks.jpeg,http://2.bp.blogspot.com/_qu1kKj1eipY/TP8iVY-at6I/AAAAAAAAAAc/SsMMrnwCwkk/s1600/1000P+Cute+Kitten.jpg,http://4.bp.blogspot.com/_KvDFauTmm3g/TIO6ClOMoHI/AAAAAAAAC-Q/SY_Fqqbe3vE/s320/cute-kitten-502.jpg,http://callbrewbaker.homestead.com/cutekitten-persian.jpg,http://1.bp.blogspot.com/-hJdzH6CIX0M/T36MtvYqOuI/AAAAAAAAABU/oCxlTXoPfK8/s1600/Cute-kitten-cute-kittens-18565723-1024-768.jpg,http://3.bp.blogspot.com/-88Gh-DK0nO0/UIY-tOuDpUI/AAAAAAAAB6A/ErXlEfInN-A/s320/very-cute-kitten.jpeg,http://2.bp.blogspot.com/-Ia6y_hGLfHA/TyLVA8N2uXI/AAAAAAAAAEg/wfyUrbJA2II/s1600/cute-kitten-in-glass.jpg,https://lh5.googleusercontent.com/--vK01Z1HmOM/T07--3xDYvI/AAAAAAAAAGA/-vizhEeH4ks/w800-h800/cute-kitten-314.jpeg,http://1.bp.blogspot.com/-ZhYoP40W7RA/TYkjoMkVqAI/AAAAAAAAABI/mtHdXJ3cq8w/s220/cute_kitten_cat.jpg,http://my10online.com/wp-content/uploads/2011/09/kitten9.jpeg,http://1.bp.blogspot.com/-WLudwHmW1Bw/TyXI0Zgsv7I/AAAAAAAAADE/Lf1jpwtY3Zw/s1600/Cute-Kitten-kittens-16122951-1280-800.jpg,http://i101.photobucket.com/albums/m56/asnat16/bth_cute-kitten.jpg,http://images2.layoutsparks.com/1/91622/cute-kitten-orange-peel.jpg,http://1.bp.blogspot.com/-OCj8LQD3ASo/UY1N8uvGNAI/AAAAAAAADJI/YR6iO92ILN4/s1600/Cute-Kitten-Wallpaper-kittens-16094684-1280-800.jpg,https://lh5.googleusercontent.com/-D9rArP03jso/T07_FLTOlpI/AAAAAAAAAHM/e4lSkvJcH1o/w800-h800/cute-kitten-marshmellows.jpg,http://images2.fanpop.com/image/photos/9700000/i-love-kittyyyyyyyyyyyyy-cute-kittens-9785244-300-300.jpg,http://images4.fanpop.com/image/photos/22400000/Cute-Kitten-kittens-22437988-350-248.jpg,http://24.media.tumblr.com/tumblr_m9u9wpiQ3Q1qzizmho4_r1_250.gif,http://i538.photobucket.com/albums/ff346/Kjmmie_crystal/Kjtten/47-cute-kitten.jpg,http://odin.mobile9.com/download/media/41/cutekitten_capokj6f.gif,http://cdn.cutestpaw.com/wp-content/uploads/2013/01/s-Cute-Kitten.jpg,http://1.bp.blogspot.com/-IV_YwiKHTgA/T5FCQHaRDwI/AAAAAAAAB7Y/RyBG8mbgR_4/s320/cute%2Bkitten%2Bpictures%2B2.jpg,http://webtaj.com/thumb/animal-cute-kitten-cat-lively-small_80094_thumb.jpg,http://ak7.picdn.net/shutterstock/videos/4241336/preview/stock-footage-a-cute-kitten-relaxes.jpg,http://stream1.gifsoup.com/view3/1214230/cute-kitten-o.gif,http://s1.wallippo.com/thumbs/300x250/cute-kitten-7c2c6672dc001ebb9e76b3405644345b.jpeg"</string>
</resources>
